# seminare

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  dummy-data.json  entrypoint.sh  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
.github/workflows/: build.yml
seminare/: __init__.py  asgi.py  settings.py  urls.py  utils.py  wsgi.py
seminare/content/: admin.py  apps.py  forms.py  models.py  tables.py  urls.py  views.py
seminare/content/migrations/: 0001_initial.py  0002_alter_page_options_post.py  0002_initial.py  0003_initial.py  0003_menugroup_menuitem.py  0004_alter_menuitem_url.py  0004_alter_page_slug_alter_post_slug.py  0005_alter_page_options_remove_page_page__unique_slug_and_more.py  0006_alter_page_slug.py  0007_post_slug.py
seminare/content/templatetags/: navbar.py  post.py
seminare/contests/: admin.py  apps.py  context_processors.py  models.py  utils.py  views.py
seminare/contests/migrations/: 0001_initial.py  0002_category.py  0002_initial.py  0003_delete_category.py  0004_alter_contest_site.py  0005_alter_contest_options_remove_contest_order.py  0006_ruledata.py  0007_ruledata_key.py  0008_contest_contact_email.py
seminare/contests/templates/: _footer.html  _footer_activities.fks.html  _footer_activities.fx.html  _footer_activities.html  _footer_activities.kms.html  _footer_activities.ksp.html  _footer_activities.prask.html  homepage.fks.html  homepage.fx.html  homepage.html  homepage.kms.html  homepage.ksp.html  homepage.prask.html
seminare/legacy/: admin.py  apps.py  models.py  urls.py  views.py
seminare/legacy/migrations/: 0001_initial.py
seminare/organizer/: apps.py  file_utils.py  forms.py  tables.py  urls.py  views.py
seminare/organizer/api/: __init__.py  auth.py  files.py  problem.py  problemset.py  text.py  users.py
seminare/organizer/templatetags/: org_navbar.py
seminare/organizer/views/: __init__.py  dashboard.py  files.py  generic.py  grading.py  late.py  menu.py  page.py  post.py  problem.py  problemset.py  role.py
seminare/problems/: admin.py  apps.py  logic.py  models.py  storages.py  urls.py  views.py
seminare/problems/migrations/: 0001_initial.py  0002_problem_points_publicly_visible.py  0002_problemset_contest.py  0003_alter_problem_points_publicly_visible.py  0003_alter_problemset_contest.py  0004_problem_reviewer.py  (+16 more)
seminare/problemy/: admin.py  apps.py  models.py  views.py
seminare/rules/: __init__.py  common.py  fks.py  kms.py  ksp.py  prask.py  results.py  scores.py  tests.py
seminare/style/: app.css  apps.py  build.mjs  forms.py  markdown_extensions.py  tables.py  views.py
seminare/submits/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
seminare/users/: admin.py  apps.py  auth.py  models.py  urls.py  views.py  widgets.py
(+155 files in other folders)
