[tool.poetry]
name = "seminare"
version = "0.1.0"
description = ""
authors = ["Adam Zahradník <adam@zahradnik.xyz>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
django-debug-toolbar = "^4.4.6"
django-environ = "^0.11.2"
gunicorn = "^23.0.0"
django-widget-tweaks = "^1.5.0"
django-probes = "^1.7.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "DJ", "T20", "Q"]