[project]
name = "seminare"
version = "0.1.0"
description = ""
authors = [{ name = "Adam Zahradník", email = "adam@zahradnik.xyz" }]
requires-python = "~=3.12.7"
readme = "README.md"
dependencies = [
    "Django~=5.1.2",
    "django-debug-toolbar~=4.4.6",
    "django-environ~=0.11.2",
    "gunicorn~=23.0.0",
    "django-widget-tweaks~=1.5.0",
    "django-probes~=1.7.0",
    "psycopg[binary]~=3.2.3",
    "markdown~=3.7",
    "mozilla-django-oidc~=4.0.1",
    "django-stubs~=5.1.1",
    "reportlab~=4.2.5",
    "pillow~=11.1.0",
    "judge-client",
]

[tool.uv]
package = false

[tool.uv.sources]
judge-client = { git = "https://github.com/trojsten/judge-client" }

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "DJ", "T20", "Q"]
