[project]
name = "seminare"
version = "0.1.0"
description = ""
authors = [{ name = "Adam Zahradník", email = "adam@zahradnik.xyz" }]
requires-python = "~=3.12.7"
readme = "README.md"
dependencies = [
    "Django~=5.2",
    "django-debug-toolbar~=4.4.6",
    "django-environ~=0.11.2",
    "gunicorn~=23.0.0",
    "django-widget-tweaks~=1.5.0",
    "django-probes~=1.7.0",
    "psycopg[binary]~=3.2.3",
    "markdown~=3.7",
    "pygments>=2.18.0",
    "mozilla-django-oidc~=4.0.1",
    "django-stubs~=5.1.1",
    "reportlab~=4.2.5",
    "pillow~=11.1.0",
    "judge-client",
    "djangorestframework>=3.16.1",
    "djangorestframework-stubs>=3.15.2",
    "sentry-sdk>=2.29.1",
    "requests>=2.32.5",
]

[tool.uv]
package = false

[tool.uv.sources]
judge-client = { git = "https://github.com/trojsten/judge-client", branch="master" }

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "DJ", "T20", "Q"]

[tool.bumpver]
current_version = "2026.15"
version_pattern = "YYYY.INC1"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"seminare/__init__.py" = [
    'VERSION = "{version}"',
]
